# GPTSession2CPAandSub2API

./: .gitignore  README.md  pyproject.toml
docs/: index.html
gptsession_converter/: __init__.py  cli.py  core.py
tests/: convert-session.test.js  test_python_converter.py
